--- a/TrueCam/res/layout/truecam_layout.xml
+++ b/TrueCam/res/layout/truecam_layout.xml
@@ -25,5 +25,6 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
-        android:src="@drawable/camera_switch" />
+        android:src="@drawable/camera_switch" 
+        android:visibility="invisible"></ImageView>"
  </RelativeLayout>
