--- a/TrueCam/res/layout/truecam_layout.xml
+++ b/TrueCam/res/layout/truecam_layout.xml
@@ -27,4 +27,16 @@
         android:layout_marginRight="20dp"
         android:src="@drawable/camera_switch" 
         android:visibility="invisible"></ImageView>"
+        
+    <ProgressBar
+        android:id="@+id/mc_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false" 
+        android:visibility="invisible"
+        android:layout_centerInParent="true">
+    </ProgressBar>"
+      
  </RelativeLayout>
