add camera library and demo code

--- a/TrueCam/res/layout/certifoto_layout.xml
+++ b/TrueCam/res/layout/certifoto_layout.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/camera_switch" 
-        android:visibility="invisible"></ImageView>"
+        android:visibility="visible"></ImageView>
         
     <ProgressBar
         android:id="@+id/mc_progressbar"
